# restui

./: Cargo.toml  README.md  state.json
src/: arg.rs  client.rs  k8s.rs  main.rs  oauth2.rs  state.rs  tui.rs  util.rs
src/views/: apps.rs  hosts.rs  mod.rs  requests.rs
