[package]
name = "helved-env"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.92.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["v1_28"] }

color-eyre = "0.6.3"
itertools = "0.13.0"

reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"

tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
futures = "0.3.30"

ratatui = "0.27.0"
tui-tree-widget = "0.21.0"

